# SecLLM

./: README.md
SecLLM/: analysis.sh  config.yaml  pyproject.toml
SecLLM/analysis/: GASEL.py  GASEL_metrics.py  analyze.py  analyze_GASEL.py  analyze_time.py  feiss_kappa.py
SecLLM/secllm/: __init__.py  analyzer.py  configurator.py  preprocessor.py  prompts.py  secllm.py
results/: results.xlsx
results/glitch/ansible/: non_det_ansible.csv
results/glitch/ansible/I-Iteration/: output_ansible.csv
results/glitch/ansible/II-Iteration/: output_ansible.csv
results/glitch/ansible/III-Iteration/: analysis_output_ansible.csv  output_ansible.csv
results/glitch/ansible/IV-Iteration/: output_ansible.csv
results/glitch/ansible/V-Iteration/: output_ansible.csv
results/glitch/chef/: non_det_chef.csv
results/glitch/chef/I-Iteration/: analysis_output_chef.csv  output_chef.csv
results/glitch/chef/II-Iteration/: analysis_output_chef.csv  output_chef.csv
results/glitch/chef/III-Iteration/: analysis_output_chef.csv  output_chef.csv
results/glitch/chef/IV-Iteration/: analysis_output_chef.csv  output_chef.csv
results/glitch/chef/V-Iteration/: analysis_output_chef.csv  output_chef.csv
results/glitch/puppet/: non_det_puppet.csv
results/glitch/puppet/I-Iteration/: output_puppet.csv
results/glitch/puppet/II-Iteration/: output_puppet.csv
results/glitch/puppet/III-Iteration/: analysis_output_puppet.csv  output_puppet.csv
results/glitch/puppet/IV-Iteration/: analysis_output_puppet.csv  output_puppet.csv
results/glitch/puppet/V-Iteration/: output_puppet.csv  (+1 more)
